--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,25 +16,24 @@ table{
     width: 70%;
     max-width: 960px;
     margin: auto;
-    border-collapse:collapse;   
+    border-collapse: collapse;   
 }
 
 th,
 td {
-    padding: 0.8rem;
+    padding: 0.8em;
 }
 
 /* thead */
 
 thead{
-    color: rgb(255, 255, 255);   
+    color: rgb(255, 255, 255); 
 }
 
 thead th:first-child{
     width: 30%;
     border-top-left-radius: 10px;
     background-color: #7987ac;
-    
 }
 
 thead th:nth-child(2){
@@ -52,7 +51,6 @@ thead th:nth-child(4){
 thead th:last-child{
     background-color: #07153a;
     border-top-right-radius:10px;
-    
 }
 
 thead p:nth-child(2){
@@ -67,12 +65,12 @@ thead p:nth-child(3){
 /* tbody */
 
 tbody > tr:nth-child(odd) > td:nth-child(odd),
-tfoot > tr:nth-child(odd) > th:nth-child(odd) {
+tfoot > tr:nth-child(odd) > td:nth-child(odd) {
     background-color: #dbdbdb;;
 }
 
 tbody > tr:nth-child(odd) > td:nth-child(even),
-tfoot > tr:nth-child(odd) > th:nth-child(even) {
+tfoot > tr:nth-child(odd) > td:nth-child(even) {
     background-color: #e7e7e7;
 }
 
@@ -94,12 +92,15 @@ tbody td:first-child{
 }
 
 /* tfoot */
+tfoot td{
+    text-align: center;
+}
 
-tfoot th:first-child{
+tfoot td:first-child{
     border-bottom-left-radius: 10px;
 }
 
-tfoot th:last-child{
+tfoot td:last-child{
     border-bottom-right-radius: 10px;
 }
 
@@ -108,11 +109,13 @@ tfoot th:last-child{
 tfoot > tr:last-child > td > button {
     padding: 10px 30px;
     border: 1px solid #515151;
+    border-radius: 5px;
     background-color: #dbdbdb;
     text-transform: uppercase;
     cursor: pointer;
 }
 tfoot > tr:last-child > td > button:hover{
     color: #19173c;
-    background-color: #b2bfd7; 
+    background-color: #b2bfd7;
+    box-shadow: 0px 0px 10px #7987ac; 
 }
